Add WAVE_JVM_OPTS, alternate port binding for DC install